--- a/Zedit-UIKit/Base.lproj/LaunchScreen.storyboard
+++ b/Zedit-UIKit/Base.lproj/LaunchScreen.storyboard
@@ -16,20 +16,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Zedit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oli-cP-LMq">
-                                <rect key="frame" x="151" y="402" width="90" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zedit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oli-cP-LMq">
+                                <rect key="frame" x="151" y="470" width="91" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="zedit_logo" translatesAutoresizingMaskIntoConstraints="NO" id="VKG-as-Kdv">
-                                <rect key="frame" x="76" y="266" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zedit_logo" translatesAutoresizingMaskIntoConstraints="NO" id="VKG-as-Kdv">
+                                <rect key="frame" x="156.66666666666666" y="382" width="80" height="80"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Oli-cP-LMq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="6Fc-Ch-4nt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Oli-cP-LMq" secondAttribute="bottom" constant="300" id="G9U-ky-p8O"/>
+                            <constraint firstItem="Oli-cP-LMq" firstAttribute="centerX" secondItem="VKG-as-Kdv" secondAttribute="centerX" id="KyM-Uj-p5A"/>
+                            <constraint firstItem="Oli-cP-LMq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="151" id="bUv-qh-WZI"/>
+                            <constraint firstItem="Oli-cP-LMq" firstAttribute="top" secondItem="VKG-as-Kdv" secondAttribute="bottom" constant="8" id="hWL-rU-3JU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
